Fixed bug with white space on right side

--- a/src/app/components/companies/companies.component.scss
+++ b/src/app/components/companies/companies.component.scss
@@ -54,10 +54,6 @@ i.fa {
   width: 100%;
 }
 
-.hidden {
-  display: none!important
-}
-
 .footer-column {
   padding: 0px;
 }
