--- a/src/styles.scss
+++ b/src/styles.scss
@@ -507,3 +507,7 @@ hr {
 .hero {
   padding-top: 84px;
 }
+
+.section {
+  overflow-x: hidden;
+}
